# mock-apis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  hello.json  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-07-live-two-way-sync.md
docs/superpowers/specs/: 2026-05-06-sqlite-port-status-design.md  2026-05-07-live-two-way-sync-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/layout/: AppSidebar.vue  AppTopBar.vue
frontend/src/components/mocks/: MockDetail.vue  MockDialog.vue
frontend/src/components/ports/: PortDialog.vue
frontend/src/router/: index.ts
frontend/src/stores/: logs.ts  mocks.ts  ports.ts
frontend/src/utils/: clipboard.ts
frontend/src/views/: DashboardView.vue  FunctionsView.vue  LogsView.vue  MocksView.vue  PortsView.vue
src/: cli.rs  daemon.rs  error.rs  main.rs
src/dashboard/: mod.rs  static_files.rs  ws.rs
src/dashboard/routes/: info.rs  logs.rs  mocks.rs  mod.rs  ports.rs
src/db/: log_store.rs  mock_store.rs  mod.rs  port_store.rs  schema.rs
src/logging/: mod.rs  subscriber.rs
src/models/: mod.rs
src/server/: handler.rs  manager.rs  mod.rs  template.rs
src/traits/: mod.rs
src/tui/: app.rs  event.rs  mod.rs
src/tui/views/: fn_help.rs  functions.rs  logs.rs  mocks.rs  mod.rs  ports.rs
