[package]
name    = "apimock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
clap               = { version = "4",    features = ["derive"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
rusqlite           = { version = "0.31", features = ["bundled"] }
tokio-rusqlite     = "0.5"
axum               = { version = "0.7",  features = ["ws", "macros"] }
tower              = "0.4"
tower-http         = { version = "0.5",  features = ["cors", "compression-gzip", "trace"] }
ratatui            = "0.28"
crossterm          = { version = "0.28", features = ["event-stream"] }
rust-embed         = { version = "8",    features = ["compression"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "fmt"] }
async-trait        = "0.1"
chrono             = { version = "0.4",  features = ["serde"] }
uuid               = { version = "1",    features = ["v4", "serde"] }
tokio-util         = { version = "0.7" }
mime_guess         = "2"
futures            = "0.3"
rand               = "0.8"

[build-dependencies]
